chore: fill works

--- a/index.html
+++ b/index.html
@@ -8,50 +8,133 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <title>Emmanuel Nwafor (Emmo00)</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <title>Emmanuel Nwafor (Emmo00) - Portfolio</title>
 </head>
 
 <body>
     <section id="header">
         <div>
-            <h1>Emmanuel Nwafor (Emmo00)</h1>
-            <p>Hello world</p>
-            <p>hi</p>
+            <h1 class="name">Emmanuel Nwafor (Emmo00)</h1>
+            <p>Software Engineer | Backend Developer </p>
+            <h3 class="equ">
+                \[
+                \lim_{{\text{skill_issues} &ThinSpace;&ThinSpace;&ThinSpace; \to 0}} \text{efficiency} \to \infty
+                \]
+            </h3>
         </div>
     </section>
+
     <section id="brief">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni perferendis recusandae dolore. Expedita
-            deserunt labore sequi eligendi quis provident illo? Assumenda itaque delectus magnam ut error? Ea, quia est?
-            Cupiditate?</p>
+        <h2>About Me</h2>
+        <p>
+            Hi, I’m Emmanuel, a Computer Science student at the University of Nigeria, Nsukka, and an aspiring software
+            developer. Currently building stuff with PHP and Laravel.
+        </p>
     </section>
+
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><a href="#">project-name</a> Project Description</li>
-            <li><a href="#">project-name</a> Project Description</li>
-            <li><a href="#">project-name</a> Project Description</li>
-            <li><a href="#">project-name</a> Project Description</li>
-            <li><a href="#">project-name</a> Project Description</li>
+            <li>
+                <a href="https://www.npmjs.com/package/persisty" target="_blank" rel="noopener noreferrer">Persisty</a>
+                - Simple Browser Local storage Abstraction. NPM package <a href="https://github.com/Emmo00/persisty"
+                    target="_blank" rel="noopener noreferrer">Source</a>
+            </li>
+            <li>
+                <a href="https://tic-tac-toe-beryl-delta.vercel.app/" target="_blank"
+                    rel="noopener noreferrer">TicTacToe-ai</a>
+                - Tic-Tac-Toe Game AI implemented with the minmax algorithm(Dare you to try it.) <a
+                    href="https://github.com/Emmo00/TicTacToe-ai" target="_blank" rel="noopener noreferrer">Source</a>
+            </li>
+            <li>
+                <a href="https://roobie-ui.vercel.app/" target="_blank" rel="noopener noreferrer">Roobie</a>
+                - Frontend to the ML model I built and trained that classifies UNN news titles into Categories <a
+                    href="https://github.com/Emmo00/roobie-ui" target="_blank" rel="noopener noreferrer">Source</a>
+            </li>
+            <li>
+                <a href="https://github.com/Emmo00/library-management-api" target="_blank"
+                    rel="noopener noreferrer">Library Management API</a>
+                - A Laravel-based project to manage library operations, featuring user roles and efficient book
+                tracking.
+            </li>
+            <li>
+                <a href="https://github.com/Emmo00/learn-C" target="_blank" rel="noopener noreferrer">learn-C</a>
+                - Learn C with examples, For Beginners.
+            </li>
+            <li>
+                <a href="#">PortfolioSync (Soon...)</a>
+                - A tool to sync and download portfolio assets like GitHub repos, articles, and videos.
+            </li>
+            <li>
+                <a href="https://nexus-trader-frontend.vercel.app/" target="_blank" rel="noopener noreferrer">Nexus
+                    Trader</a>
+                - A Binary Trading App built with React and Laravel.
+                <a href="https://github.com/Emmo00/nexus-trader-frontend" target="_blank"
+                    rel="noopener noreferrer">Frontend</a>
+                <a href="https://github.com/Emmo00/nexus-trader-backend" target="_blank"
+                    rel="noopener noreferrer">Backend</a>
+            </li>
+            <li>
+                <a href="http://github.com/emmo00" target="_blank" rel="noopener noreferrer">...</a>
+            </li>
         </ul>
     </section>
+
     <section id="articles">
         <h2>Articles</h2>
         <ul>
-            <li><a href="#">Article-name</a> Article Description</li>
-            <li><a href="#">Article-name</a> Article Description</li>
-            <li><a href="#">Article-name</a> Article Description</li>
-            <li><a href="#">Article-name</a> Article Description</li>
-            <li><a href="#">Article-name</a> Article Description</li>
+            <li>
+                <a href="https://dev.to/emmo00/learning-a-new-languageframework-1ef7" target="_blank"
+                    rel="noopener noreferrer">Learning a new language/framework</a>
+                - I recently took up an internship role where I had to use a programming language and framework I was
+                unfamiliar with...
+            </li>
+            <li>
+                <a href="https://dev.to/emmo00/what-is-the-point-of-using-recursive-functions-when-writing-code-2k4f">What
+                    is the point of using recursive functions when writing code?</a>
+                - Have you ever heard of recursion in programming? It's a cool technique where a function can...
+            </li>
+            <li>
+                <a href="https://dev.to/emmo00/the-difference-between-and-in-javascript-3em3">The difference between
+                    '||' and '??' in JavaScript.</a>
+                - They are usually used in writing one-liner "hotwires" (providing default values or fallbacks) and
+                while...
+            </li>
+            <li>
+                <a
+                    href="https://dev.to/emmo00/how-to-setup-black-and-pre-commit-in-python-for-auto-text-formatting-on-commit-4kka">How
+                    to use Black and pre-commit for auto text-formatting on commit [setup] [python]</a>
+                - How to use Black and pre-commit for auto text-formatting on commit [setup] [python]...
+            </li>
+            <li>
+                <a href="https://dev.to/emmo00/closures-memoisation-3gpp">Closures 🫂 Memoisation </a>
+                - In functional programming, closure refers to the ability of a function to access and utilize...
+            </li>
+            <li>
+                <a
+                    href="https://medium.com/@nwaforemmanuel005/what-happens-when-you-type-google-com-in-your-browser-and-press-enter-327f22292b50">What
+                    happens when you type google.com in your browser and press Enter. </a>
+                - How the web works remains a mysterious black box to most people, despite its ubiquitous presence in
+                our lives. In this article...
+            </li>
+            <li>
+                <a href="https://dev.to/emmo00" target="_blank" rel="noopener noreferrer">...</a>
+            </li>
         </ul>
     </section>
+
     <section id="contact">
         <h2>Contact</h2>
-        <div>
-            <p>Github</p>
-            <p>Email</p>
-            <p>X(formerly Twitter)</p>
-            <p>LinkedIn</p>
-        </div>
+        <ul>
+            <li><strong>GitHub:</strong> <a href="https://github.com/Emmo00">Emmo00</a></li>
+            <li><strong>Email:</strong> <a href="mailto:nwaforemmanuel005@gmail.com">nwaforemmanuel005$gmail.com</a>
+            </li>
+            <li><strong>X (formerly Twitter):</strong> <a href="https://twitter.com/emma_nwafor1">@emma_nwafor1</a></li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/emmanuel-nwafor-53735a270/">Emmanuel
+                    Nwafor</a></li>
+        </ul>
     </section>
 </body>
 
