--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <title>Emmanuel Nwafor (Emmo00) - Portfolio</title>
+
+    <meta name="description" content="Explore Emmanuel Nwafor's portfolio: Software Developer, Backend Developer, Mentor, and Tech Enthusiast. Showcasing projects, articles, and contact information." />
+    <meta property="og:title" content="Emmanuel Nwafor (Emmo00) - Portfolio" />
+    <meta property="og:description" content="Discover Emmanuel Nwafor's journey as a Backend Developer, his projects, articles, and how to connect." />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/88244468?v=4" />
+    <meta property="og:url" content="https://github.com/emmo00" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Emmanuel Nwafor (Emmo00) - Portfolio" />
+    <meta name="twitter:description" content="Software Developer | Backend Developer | Mentor | Tech Enthusiast. Explore my projects, articles, and get in touch." />
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/88244468?v=4" />
 </head>
 
 <body>
