--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <meta name="twitter:title" content="Emmanuel Nwafor (Emmo00) - Portfolio" />
     <meta name="twitter:description" content="Software Developer | Backend Developer | Mentor | Tech Enthusiast. Explore my projects, articles, and get in touch." />
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/88244468?v=4" />
+
+    <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/88244468?v=4" type="image/x-icon">
 </head>
 
 <body>
