--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     target="_blank" rel="noopener noreferrer">Source</a>
             </li>
             <li>
-                <a href="https://tic-tac-toe-beryl-delta.vercel.app/" target="_blank"
+                <a href="https://tictactoe-ai-eight.vercel.app/" target="_blank"
                     rel="noopener noreferrer">TicTacToe-ai</a>
                 - Tic-Tac-Toe Game AI implemented with the minmax algorithm(Dare you to try it.) <a
                     href="https://github.com/Emmo00/TicTacToe-ai" target="_blank" rel="noopener noreferrer">Source</a>
