--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <title>Emmanuel Nwafor (Emmo00) - Portfolio</title>
 
-    <meta name="description" content="Explore Emmanuel Nwafor's portfolio: Software Developer, Backend Developer, Mentor, and Tech Enthusiast. Showcasing projects, articles, and contact information." />
+    <meta name="description"
+        content="Explore Emmanuel Nwafor's portfolio: Software Developer, Backend Developer, Mentor, and Tech Enthusiast. Showcasing projects, articles, and contact information." />
     <meta property="og:title" content="Emmanuel Nwafor (Emmo00) - Portfolio" />
-    <meta property="og:description" content="Discover Emmanuel Nwafor's journey as a Backend Developer, his projects, articles, and how to connect." />
+    <meta property="og:description"
+        content="Discover Emmanuel Nwafor's journey as a Backend Developer, his projects, articles, and how to connect." />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/88244468?v=4" />
     <meta property="og:url" content="https://github.com/emmo00" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Emmanuel Nwafor (Emmo00) - Portfolio" />
-    <meta name="twitter:description" content="Software Developer | Backend Developer | Mentor | Tech Enthusiast. Explore my projects, articles, and get in touch." />
+    <meta name="twitter:description"
+        content="Software Developer | Backend Developer | Mentor | Tech Enthusiast. Explore my projects, articles, and get in touch." />
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/88244468?v=4" />
 
     <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/88244468?v=4">
@@ -43,13 +46,20 @@
         <h2>About Me</h2>
         <p>
             Hi, I’m Emmanuel, a Computer Science student at the University of Nigeria, Nsukka, and an aspiring software
-            developer. Currently building stuff with PHP and Laravel.
+            developer. Currently building stuff with PHP and Laravel, and Learning Solidity and Blockchain Development.
         </p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <ul>
+            <li>
+                <a href="https://packagist.org/packages/emmo00/mock-paystack-laravel" target="_blank"
+                    rel="noopener noreferrer">mock-paystack-laravel</a>
+                - PHP package for mocking Paystack responses and webhooks in your Laravel Test Suite <a
+                    href="https://github.com/Emmo00/mock-paystack-laravel" target="_blank"
+                    rel="noopener noreferrer">Source</a>
+            </li>
             <li>
                 <a href="https://www.npmjs.com/package/persisty" target="_blank" rel="noopener noreferrer">Persisty</a>
                 - Simple Browser Local storage Abstraction. NPM package <a href="https://github.com/Emmo00/persisty"
