--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h2>Contact</h2>
         <ul>
             <li><strong>GitHub:</strong> <a href="https://github.com/Emmo00">Emmo00</a></li>
-            <li><strong>Email:</strong> <a href="mailto:nwaforemmanuel005@gmail.com">nwaforemmanuel005$gmail.com</a>
+            <li><strong>Email:</strong> <a href="mailto:nwaforemmanuel005@gmail.com">nwaforemmanuel005@gmail.com</a>
             </li>
             <li><strong>X (formerly Twitter):</strong> <a href="https://twitter.com/emma_nwafor1">@emma_nwafor1</a></li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/emmanuel-nwafor-53735a270/">Emmanuel
